--- a/package.ini
+++ b/package.ini
@@ -4,3 +4,7 @@ desc = Cascading Attributes
 version = 0.0.1
 author = Yo-An Lin <cornelius.howl@gmail.com>
 channel = pear.corneltek.com
+
+[require]
+pear.corneltek.com/Universal = 0
+pear.corneltek.com/PHPUnit_TestMore = 0
