--- a/package.ini
+++ b/package.ini
@@ -1,9 +1,10 @@
 [package]
 name = CascadingAttribute
 desc = Cascading Attributes
-version = 0.0.1
+version = 1.0.1
 author = Yo-An Lin <cornelius.howl@gmail.com>
 channel = pear.corneltek.com
+stability = stable
 
 [require]
 pear.corneltek.com/Universal = 0
