--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "c9s/CascadingAttribute",
+    "name": "corneltek/cascading-attribute",
     "authors": [
         {
             "name": "c9s",
